# chooui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
.zed/: debug.json  settings.json  tasks.json
src/: browser.rs  components.rs  main.rs  model.rs  queue.rs  theme.rs
src/actions/: commands.rs  events.rs  mod.rs
src/commander/: mod.rs
src/components/catalog/: event.rs  mod.rs  render.rs
src/components/equalizer/: event.rs  mod.rs  render.rs
src/components/favourites/: mod.rs  render.rs
src/components/help/: event.rs  mod.rs  render.rs
src/components/playlist/: event.rs  mod.rs  render.rs
src/components/search/: event.rs  mod.rs  render.rs
src/components/track_table/: event.rs  mod.rs  render.rs
src/config/: mod.rs
src/db/: mod.rs  model.rs  new-search.rs  scan.rs
src/events/: handlers.rs  key_handlers.rs  mod.rs
src/model/: catalog.rs  equalizer.rs  mod.rs  queue.rs  search.rs
src/player/: commands.rs  mod.rs
src/render/: browser.rs  commander.rs  equalizer.rs  icons.rs  mod.rs  player.rs  queue.rs
src/status/: mod.rs
src/tasks/: handlers.rs  mod.rs
src/util/: format.rs  mod.rs  term.rs
