[package]
name = "chooui"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.102"
confy = "2.0.0"
crossterm = "0.29.0"
lofty = "0.23.2"
mpv = "0.2.3"
rand = "0.10.0"
ratatui = "0.30.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tui-input = "0.15.0"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
